crates/pvm-contract-macros/tests/ui/receive_returns_value.stderr
error: `#[receive]` must return `()` or `Result<(), E>`; Solidity's receive cannot return a value
 --> tests/ui/receive_returns_value.rs:8:35
  |
8 |         pub fn receive(&mut self) -> u64 {
  |                                   ^^^^^^
